flux/apps/hoyeslab/media/profilarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
  namespace: media
  labels:
    app.kubernetes.io/name: profilarr
    app.kubernetes.io/instance: profilarr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: profilarr
      app.kubernetes.io/instance: profilarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: profilarr
        app.kubernetes.io/instance: profilarr
    spec:
      containers:
        - name: profilarr
          image: ghcr.io/dictionarry-hub/profilarr:2.2.0
          ports:
            - name: http
              containerPort: 6868
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: profilarr-config
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http

      volumes:
        - name: profilarr-config
          persistentVolumeClaim:
            claimName: profilarr-config
