flux/apps/hoyeslab/media/profilarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: profilarr
    app.kubernetes.io/instance: profilarr
