flux/apps/hoyeslab/media/profilarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilarr
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: profilarr.hoyes.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profilarr
                port:
                  name: http
  tls:
    - hosts:
        - profilarr.hoyes.dev
      secretName: hoyes-dev-tls
